--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -1,6 +1,12 @@
 <%= link_to "返回節目列表", podcasts_path %>
 <br>
 <h1><%= @podcast.name %></h1>
+
+<p>
+  <strong>Cover:</strong>
+  <%= image_tag(@podcast.cover_url) if @podcast.cover? %>
+</p>
+
 <ul>
   <li>創作者：<%= @podcast.artist %></li>
   <li>類別：<%= @podcast.genres %></li>
