--- a/app/views/podcasts/_form.html.erb
+++ b/app/views/podcasts/_form.html.erb
@@ -13,7 +13,7 @@
   <%= f.input :email, label: "Email" %>
   <%= f.input :language, collection: ["繁體中文", "简体中文", "粵語", "English", "日本語", "한국어"], label: "語言" %>
   <%= f.input :slug, label: "好記短網址https://soundbar.tk/" %>
-  <%= f.input :genres, collection: ["Arts", "Business", "Comedy", "Education", "Fiction", "Health & Fitness", "History", "Kids & Family", "Leisure", "Music", "News", "Religion & Spirituality", "Science", "Society & Culture", "Sports", "TV & Film", "Technology"], label: "類別" %>
+  <%= f.input :genres, collection: Podcast.genres.values, label: "類別" %>
   <%= f.input :description, label: "描述" %>
   <%= f.input :subtitle, label: "Subtitle" %>
   <%= f.input :weblink, label: "網站連結" %>
