AWS S3 upload picture

--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -4,7 +4,7 @@
 
 <p>
   <strong>Cover:</strong>
-  <%= image_tag(@podcast.cover_url) if @podcast.cover? %>
+  <%= image_tag(@podcast.cover.url) if @podcast.cover? %>
 </p>
 
 <ul>
