上傳mp3 至AWS S3 功能

--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -6,3 +6,9 @@
   <li>描述：<%= @episode.description %></li>
 </ul>
 
+
+<h2>節目播放器：</h2> 
+
+<audio controls="controls" preload="none" autostart="false">
+    <source src="<%= @episode.recording.url %>" type="audio/mp3"></source>
+</audio>
