--- a/app/views/episodes/edit.html.erb
+++ b/app/views/episodes/edit.html.erb
@@ -16,7 +16,8 @@
   <%= f.input :episode, label: "集" %>
   <%= f.input :explicit, label: "兒童不宜" %>
   <%= f.input :status, collection: ["草稿", "發布"], label: "狀態" %>
-  <%= f.button :submit, "編輯單集" %>
+  <%= f.input :recording, as: :file, label: "更新音檔 MP3" %>
+  <%= f.button :submit, "更新單集" %>
 <% end %>
 
 <br>
