--- a/app/views/episodes/new.html.erb
+++ b/app/views/episodes/new.html.erb
@@ -16,8 +16,10 @@
   <%= f.input :episode, label: "集" %>
   <%= f.input :explicit, label: "兒童不宜" %>
   <%= f.input :status, collection: ["草稿", "發布"], label: "狀態" %>
+  <%= f.input :recording, as: :file, label: "新增音檔 MP3" %>
   <%= f.button :submit, "新增單集" %>
 <% end %>
+
 
 <br>
 <%= link_to "返回單集列表", podcast_path(@podcast) %>
