--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Podcast 節目列表</h1> 
 <%= link_to "新增節目", new_podcast_path %>
 <br>
-<table class="table">
+<table class="table" class="w-64">
   <thead>
-    <tr>
+    <tr class="bg-red-50">
       <th>類別</th>
       <th>節目名稱</th>
       <th>創作者</th>
