--- a/app/views/podcasts/_form.html.erb
+++ b/app/views/podcasts/_form.html.erb
@@ -6,9 +6,9 @@
   </ul>
 <% end %>
 
-
+<div class="border border-transparent">
 <%= simple_form_for podcast do |f| %>
-  <%= f.input :name, label: "Podcast 節目名稱" %>
+  <%= f.input :name, label: "Podcast 節目名稱", input_html:{ class: "border border-transparent, px-1" } %>
   <%= f.input :artist, label: "創作者名稱" %>
   <%= f.input :email, label: "Email" %>
   <%= f.input :language, collection: ["繁體中文", "简体中文", "粵語", "English", "日本語", "한국어"], label: "語言" %>
@@ -24,5 +24,6 @@
   <br />
   <%= f.button :submit %>
 <% end %>
+</div>
 <br>
 <%= link_to "返回節目列表", podcasts_path %>
