--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -14,6 +14,8 @@
   <li>描述：<%= @podcast.description %></li>
 </ul>
 <br>
+<%= link_to "贊助", donate_podcast_path(@podcast) %>
+<br>
 <%= link_to "新增單集", new_podcast_episode_path(@podcast) %>
 
 <table class="table">
