--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -8,7 +8,7 @@
 </p>
 
 <ul>
-  <li>創作者：<%= @podcast.artist %></li>
+  <li>創作者名稱：<%= @podcast.artist %></li>
   <li>類別：<%= @podcast.genres %></li>
   <li>語言：<%= @podcast.language %></li>
   <li>描述：<%= @podcast.description %></li>
@@ -19,7 +19,7 @@
 <table class="table">
   <thead>
     <tr>
-      <th>#</th>
+      <th>
       <th>標題</th>
       <th>發布日期</th>
       <th>連結</th>
