--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,7 @@
 <h2><%= flash[:notice]%></h2> <br>
 <% if user_signed_in? %>
   <%= current_user.email %>
+  <%= current_user.username %>
   <%= link_to '編輯', edit_user_registration_path %>
   <%= link_to '登出', destroy_user_session_path, method: 'delete', data: {confirm: '是否確定登出'} %>
 <% else %>
