add path to routes

--- a/app/views/podcasts/new_donation.html.erb
+++ b/app/views/podcasts/new_donation.html.erb
@@ -20,7 +20,7 @@
   <li>描述：<%= @podcast.description %></li>
 </ul>
 
-<%= simple_form_for @donation, url:  donate_podcast_path  do |f| %>
+<%= simple_form_for @donation, url:  donate_p_path  do |f| %>
   <%= f.input :donator, label: "贊助者" %>
   <%= f.input :note, label: "想對作者說的話" %>
   <%= f.input :amount, label: "贊助金額" %>
