--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -2,34 +2,51 @@
   <div class="flex m-6 justify-center md:justify-start">
     <%= image_tag("logo", size: "180x180") %>
   </div>
+  <div class="flex justify-end m-3">
+    <div class="p-3">
+      <span class="p-1"><i class="far fa-user"></i></span>
+      <span><i class="fas fa-angle-down"></i></span>
+    </div>
+    <div class="p-3">
+      <span class="p-1"><i class="fas fa-globe"></i></span>
+      <span><i class="fas fa-angle-down"></i></span>
+      </div>
+    <div class="p-3">
+      <span><i class="fas fa-cog"></i></span>
+    </div>
+  </div>
 </header>
 
-<h1 class="text-2xl font-black ml-10 mt-5 mb-5">歡迎來到 SoundBar</h1>
+<h1 class="welcome">歡迎來到 SoundBar</h1>
 
 <section class="bg-blue-50 h-screen">
   <div class="flex justify-between">
-    <div>
-      <input class="w-72 ml-10 mt-5 mb-5 bg-blue-white shadow rounded border-0 p-2" placeholder="搜尋 Podcast">
-    </div>
+    <form class="search-form border hover:border-blue-600 rounded flex my-auto ml-10">
+      <button class="search-btn focus:outline-none w-10 bg-white rounded-l text-gray-500 border-none p-2"><i class="fas fa-search"></i></button><input type="text" class="search-input focus:outline-none w-72 bg-white rounded-r border-none p-2" placeholder="搜尋 Podcast">
+    </form>
     <div>
       <button class="ml-10 mt-5 mb-5 mr-10 rounded-lg p-2 text-lg text-white bg-blue-500 hover:shadow-inner duration-500 hover:bg-blue-400">
         <%= link_to "建立 Podcast", new_podcast_path %>
       </button>
     </div>
   </div>
+  
   <div class="flex items-center justify-center">
     <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
       <% @podcasts.each do |podcast| %>
-        <div class="relative bg-white py-6 px-6 rounded-3xl w-80 my-4 shadow-xl">
+        <div class="relative bg-white py-6 px-6 rounded-3xl w-80 my-4 shadow-xl transform hover:-translate-y-1 hover:scale-100">
           <div class="flex">
-            <div class="p-3 rounded"><img src="https://picsum.photos/30/30/?random=1"></div>
+            <div class="p-3"><img src="https://picsum.photos/30/30/?random=1"></div>
             <div>
               <h3 class="font-black duration-500 hover:text-blue-500"><%= link_to podcast.name, podcast_path(podcast.id) %></h3>
               <p class="font-light"><%= podcast.artist %></p>
             </div>
           </div>
           <div class="border-t-2"></div>
-          <p class="pt-3 font-light"> ＋新增單集</p>
+          <div class="flex justify-center">
+            <p class="pt-3 pr-3 hover:text-blue-700 duration-500"><%= link_to "編輯", edit_podcast_path(podcast) %></p>
+            <p class="pt-3 hover:text-red-500 duration-500"><%= link_to "刪除", podcast_path(podcast), method: "delete", data: {confirm: "是否確認刪除？"} %></p>
+          </div>  
         </div>
       <% end %>
 
