--- a/app/views/episodes/new.html.erb
+++ b/app/views/episodes/new.html.erb
@@ -1,4 +1,7 @@
-<h1>新增單集</h1>
+<div class="flex m-6 justify-center">
+  <a href="/podcaster/podcasts"><%= image_tag("new_logo_black", size: "280x280") %></a>
+</div>
+<h1 class="flex justify-center m-10 text-2xl font-bold">新增單集 Episode</h1>
 
 <% if @episode.errors.any? %>
   <ul>
@@ -8,18 +11,26 @@
   </ul>
 <% end %>
 
-<%= simple_form_for @episode, url: podcast_episodes_path(@podcast) do |f| %>
-  <%= f.input :title, label: "標題" %>
-  <%= f.input :description, label: "描述" %>
-  <%= f.input :keyword, label: "關鍵字" %>
-  <%= f.input :season, label: "季" %>
-  <%= f.input :episode, label: "集" %>
-  <%= f.input :explicit, label: "兒童不宜" %>
-  <%= f.input :status, collection: ["草稿", "發布"], label: "狀態" %>
-  <%= f.input :recording, as: :file, label: "新增音檔 MP3" %>
-  <%= f.button :submit, "新增單集" %>
-<% end %>
+<div class="grid justify-center">
+  <%= simple_form_for @episode, url: podcast_episodes_path(@podcast) do |f| %>
+    <%= f.input :title, input_html:{class: "fill-form" }, label: "標題" %>
+    <%= f.input :description, input_html:{class: "fill-form" }, label: "描述" %>
+    <%= f.input :keyword, input_html:{class: "fill-form" }, label: "關鍵字" %>
+    <%= f.input :season, input_html:{class: "fill-form" }, label: "季" %>
+    <%= f.input :episode, input_html:{class: "fill-form" }, label: "集" %>
+    <%= f.input :status, collection: ["草稿", "發布"], input_html:{class: "fill-form" }, label: "狀態" %>
+    <%= f.input :explicit, input_html:{class: "" }, label: "兒童不宜" %>
+    <%= f.input :recording, as: :file, input_html:{class: "flex" }, label: "新增音檔 MP3" %>
 
+    <div class='flex items-center justify-center  md:gap-8 gap-4 pt-5 pb-5'>
+      <button class='btn bg-gray-500 hover:bg-gray-700'><%= link_to "返回單集列表", podcast_path(@podcast) %></button>
+      <%= f.button :submit, "新增單集", class: "btn-primary btn" %>
+    </div>
+  <% end %>
+</div>
 
-<br>
-<%= link_to "返回單集列表", podcast_path(@podcast) %>
+<footer class="flex bg-blue-50 p-5 justify-center">
+  <p class="text-blue-500 pr-1 duration-500 hover:text-blue-400">使用條款</p>
+  <p class="pl-1">© 2021 SoundBar, Inc.</p>
+</footer>
+
