--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -1,6 +1,6 @@
 <header>
   <div class="flex m-6 justify-center md:justify-start">
-    <%= image_tag("logo", size: "180x180") %>
+    <a href="/podcaster/podcasts"><%= image_tag("new_logo_black", size: "280x280") %></a>
   </div>
   <div class="flex justify-end m-3">
     <div class="p-3">
@@ -30,7 +30,7 @@
       </button>
     </div>
   </div>
-  
+
   <div class="flex items-center justify-center">
     <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
       <% @podcasts.each do |podcast| %>
@@ -46,7 +46,7 @@
           <div class="flex justify-center">
             <p class="pt-3 pr-3 hover:text-blue-700 duration-500"><%= link_to "編輯", edit_podcast_path(podcast) %></p>
             <p class="pt-3 hover:text-red-500 duration-500"><%= link_to "刪除", podcast_path(podcast), method: "delete", data: {confirm: "是否確認刪除？"} %></p>
-          </div>  
+          </div>
         </div>
       <% end %>
 
