--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -1,6 +1,6 @@
 <header>
-  <div class="flex m-6 justify-center md:justify-start">
-    <%= image_tag("logo", size: "180x180") %>
+  <div class="flex m-6 justify-center">
+    <a href="/podcaster/podcasts"><%= image_tag("new_logo_black", size: "280x280") %></a>
   </div>
 </header>
 
@@ -17,7 +17,6 @@
   <li class="podcast-info">・Email：<%= @podcast.email %></li>
   <li class="podcast-info">・描述：<%= @podcast.description %></li>
   <li class="podcast-info">・Subtitle：<%= @podcast.subtitle %></li>
-  <li class="podcast-info">・iTunes 類別：<%= @podcast.genres %></li>
   <li class="podcast-info">・語言：<%= @podcast.language %></li>
   <li class="podcast-info">・好記短網址：<%= @podcast.slug %></li>
   <li class="podcast-info">・版權宣告：<%= @podcast.copyright %></li>
