update footer & logo import method

--- a/app/views/episodes/edit.html.erb
+++ b/app/views/episodes/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="flex m-6 justify-center">
-  <a href="/podcaster/podcasts"><%= image_tag("new_logo_black", size: "280x280") %></a>
+  <%= link_to image_tag("new_logo_black", size: "280x280"), "/podcaster/podcasts" %>
 </div>
 
 <h1 class="flex justify-center m-10 text-2xl font-bold">編輯單集</h1>
