--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -1,7 +1,6 @@
 <header>
   <div class="flex m-6 justify-center md:justify-start">
-    <a href="/podcaster/podcasts"><%= image_tag("new_logo_black", size: "280x280") %></a>
-  </div>
+    <%= link_to image_tag("new_logo_black", size: "280x280"), "/podcaster/podcasts" %>  </div>
   <div class="flex justify-end m-3">
     <div class="p-3">
       <span class="p-1"><i class="far fa-user"></i></span>
