--- a/app/views/episodes/new.html.erb
+++ b/app/views/episodes/new.html.erb
@@ -8,7 +8,7 @@
   </ul>
 <% end %>
 
-<%= simple_form_for @episode, url: podcast_episodes_path(@podcast) do |f| %>
+<%= simple_form_for @episode, url: podcast_episodes_path(@podcast.random_url) do |f| %>
   <%= f.input :title, label: "標題" %>
   <%= f.input :description, label: "描述" %>
   <%= f.input :keyword, label: "關鍵字" %>
