--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -30,7 +30,7 @@
       </button>
     </div>
   </div>
-  
+
   <div class="flex items-center justify-center">
     <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
       <% @podcasts.each do |podcast| %>
@@ -38,7 +38,7 @@
           <div class="flex">
             <div class="p-3"><img src="https://picsum.photos/30/30/?random=1"></div>
             <div>
-              <h3 class="font-black duration-500 hover:text-blue-500"><%= link_to podcast.name, podcast_path(podcast.id) %></h3>
+              <h3 class="font-black duration-500 hover:text-blue-500"><%= link_to podcast.name, podcast_path(podcast.random_url) %></h3>
               <p class="font-light"><%= podcast.artist %></p>
             </div>
           </div>
@@ -46,7 +46,7 @@
           <div class="flex justify-center">
             <p class="pt-3 pr-3 hover:text-blue-700 duration-500"><%= link_to "編輯", edit_podcast_path(podcast) %></p>
             <p class="pt-3 hover:text-red-500 duration-500"><%= link_to "刪除", podcast_path(podcast), method: "delete", data: {confirm: "是否確認刪除？"} %></p>
-          </div>  
+          </div>
         </div>
       <% end %>
 
