--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -46,9 +46,9 @@
           <td class="table-content">S<%= episode.season %>E<%= episode.episode %></td>
           <td class="table-content"><%= episode.title %></td>
           <td class="table-content"><%= episode.created_at %></td>
-          <td class="table-content button-link"><%= link_to "預覽", podcast_episode_path(@podcast.random_url, episode.id) %></td>
-          <td class="table-content button-edit"><%= link_to "Edit", edit_podcast_episode_path(@podcast.random_url, episode.id) %></td>
-          <td class="table-content button-delete"><%= link_to "Delete", podcast_episode_path(@podcast.random_url, episode.id), method: "delete", data: {confirm: "是否確認刪除？"} %></td>
+          <td class="table-content button-link"><%= link_to "預覽", podcast_episode_path(@podcast.random_url, episode.random_url) %></td>
+          <td class="table-content button-edit"><%= link_to "Edit", edit_podcast_episode_path(@podcast.random_url, episode.random_url) %></td>
+          <td class="table-content button-delete"><%= link_to "Delete", podcast_episode_path(@podcast.random_url, episode.random_url), method: "delete", data: {confirm: "是否確認刪除？"} %></td>
         </div>
         <% end %>
       </tbody>
