--- a/app/views/p/index.html.erb
+++ b/app/views/p/index.html.erb
@@ -1,3 +1,7 @@
 <h1>P#index</h1>
-<p>Find me in app/views/p/index.html.erb</p>
 
+
+<% @podcasts.each  do |podcast| %>
+  節目名稱：<%= podcast.name %></br>
+  作者：<%= podcast.artist %>
+<% end %>
