update css settings

--- a/app/javascript/styles/form.scss
+++ b/app/javascript/styles/form.scss
@@ -5,3 +5,15 @@ abbr[title="required"] {
 .error {
   @apply text-red-600 font-bold;
 }
+
+.fill-form {
+  @apply flex w-auto border-2 rounded-md m-2 p-2 hover:border-blue-500;
+}
+
+.fill-form-status {
+  @apply border-2 rounded-md m-2 p-2 hover:border-blue-500;
+}
+
+.input {
+  @apply m-2;
+}
