--- a/app/javascript/styles/button.scss
+++ b/app/javascript/styles/button.scss
@@ -1,5 +1,5 @@
 .btn {
-  @apply w-auto rounded-lg shadow-xl font-medium text-white px-4 py-2;
+  @apply w-auto rounded-lg font-medium text-white px-4 py-2;
 }
 
 .btn-primary {
@@ -16,4 +16,8 @@
 
 .button-delete {
   @apply rounded-full text-white bg-red-300 font-bold hover:bg-red-600 duration-500;
+}
+
+.return_btn {
+  @apply border rounded-md p-3 m-3 text-white bg-blue-500 hover:bg-blue-700 duration-300;
 }
