--- a/app/views/podcasts/_form.html.erb
+++ b/app/views/podcasts/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="grid justify-center">
+<div class="grid justify-center m-2">
   <%= simple_form_for podcast do |f| %>
     <%= f.input :cover, as: :file, input_html:{class: "m-2 p-2" }, label: "上傳封面圖片" %>
     <%= f.input :name, input_html:{class: "fill-form" }, label: "Podcast 節目名稱", error: '請填寫 Podcast 名稱' %>
