update footer at right pages

--- a/app/views/podcasts/edit.html.erb
+++ b/app/views/podcasts/edit.html.erb
@@ -4,3 +4,6 @@
 <h1 class="flex justify-center m-10 text-2xl font-bold">編輯節目</h1>
 
 <%= render 'form', podcast: @podcast %>
+<div>
+  <%= render '/layouts/footer' %>
+</div>
