--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -22,4 +22,6 @@
 <div class='flex items-center justify-center  md:gap-8 gap-4 pt-5 pb-5'>
   <button class='btn bg-blue-500 hover:bg-blue-700'><%= link_to "返回單集列表", podcast_path(@podcast) %></button>
 </div>
-
+<div>
+  <%= render '/layouts/footer' %>
+</div>
