--- a/app/views/podcasts/new.html.erb
+++ b/app/views/podcasts/new.html.erb
@@ -4,3 +4,6 @@
 
 <h1 class="flex justify-center m-10 text-2xl font-bold">建立 Podcast</h1>
 <%= render 'form', podcast: @podcast %>
+<div>
+  <%= render '/layouts/footer' %>
+</div>
