rename class of p_show.scss

--- a/app/javascript/styles/form.scss
+++ b/app/javascript/styles/form.scss
@@ -7,7 +7,7 @@ abbr[title="required"] {
 }
 
 .fill-form {
-  @apply flex w-auto border-2 rounded-md m-2 p-2 hover:border-blue-500;
+  @apply flex w-full border-2 rounded-md m-2 p-2 hover:border-blue-500;
 }
 
 .fill-form-status {
