--- a/app/javascript/styles/p_show.scss
+++ b/app/javascript/styles/p_show.scss
@@ -1,20 +1,20 @@
 
-  input {
+  #subscription {
     display: none;
   }
   .subscription{
     max-width: 200px;
   }
-  .window{
+  .check-sign-up{
     background-color: grey;
     overflow: hidden;
     max-height: 0;
     transition:(max-height .3s);
   }
-  input:checked ~ .window{
+  #subscription:checked ~ .check-sign-up{
   max-height: 300px;
   }
-  .signup {
+  .sign-up {
     color: blue;
   }
 
