--- a/app/views/player/podcasts/browse.html.erb
+++ b/app/views/player/podcasts/browse.html.erb
@@ -15,7 +15,7 @@
           <div class="flex">
             <div class="p-3"><img src="https://picsum.photos/30/30/?random=1"></div>
             <div>
-              <h3 class="font-black duration-500 hover:text-blue-500"><%= link_to podcast.name, p_path(podcast.random_url) %></h3>
+              <h3 class="font-black duration-500 hover:text-blue-500"><%= link_to podcast.name, player_podcast_path(podcast.random_url) %></h3>
               <p class="font-light"><%= podcast.artist %></p>
             </div>
           </div>
