--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -16,6 +16,11 @@
   </div>
 </header>
 
+<div class="flex">
+  <p class="mx-2">Hi, <%= current_user.email %></p>
+  <p class="mx-2"><%= link_to "登出", destroy_user_session_path, method: "delete", class: "btn btn-success" %></p>
+</div>
+
 <h1 class="welcome">歡迎來到 SoundBar</h1>
 
 <section class="bg-blue-50 h-full">
