--- a/app/views/pages/podcasters.html.erb
+++ b/app/views/pages/podcasters.html.erb
@@ -5,7 +5,7 @@
 <div class="flex">
 
   參考 <%= link_to "Soundon官網for Podcaster", 'https://podcasters.soundon.fm/', class: "btn bg-green-400 hover:bg-green-600", target: "_blank" %>
-  <%= link_to "登入", new_user_session_path, class: "btn bg-gray-400 hover:bg-gray-600" %>
-  <%= link_to "馬上註冊", new_user_registration_path , class: "btn btn-primary" %>
+  <%= link_to "登入", new_user_session_url(subdomain: nil), class: "btn bg-gray-400 hover:bg-gray-600" %>
+  <%= link_to "馬上註冊", new_user_registration_url(subdomain: nil) , class: "btn btn-primary" %>
 
 </div>
