--- a/app/javascript/styles/form.scss
+++ b/app/javascript/styles/form.scss
@@ -17,3 +17,7 @@ abbr[title="required"] {
 .input {
   @apply m-2;
 }
+
+.sign_form {
+  @apply mt-1 pl-5 block w-full border-none bg-gray-100 h-11 rounded-xl shadow-lg hover:bg-blue-100 focus:bg-blue-100 focus:ring-0;
+}
