--- a/app/javascript/styles/button.scss
+++ b/app/javascript/styles/button.scss
@@ -1,5 +1,5 @@
 .btn {
-  @apply w-auto rounded-lg font-medium text-white px-4 py-2;
+  @apply rounded-lg font-medium px-4 py-2 bg-blue-500 w-full text-white shadow-xl hover:shadow-inner focus:outline-none transition duration-500 ease-in-out  transform hover:-translate-x-0 hover:scale-105;
 }
 
 .btn-primary {
@@ -20,10 +20,6 @@
 
 .return_btn {
   @apply border rounded-md p-3 m-3 text-white bg-blue-500 hover:bg-blue-700 duration-300;
-}
-
-.create_account_btn {
-  @apply bg-blue-500 w-full py-3 rounded-xl text-white shadow-xl hover:shadow-inner focus:outline-none transition duration-500 ease-in-out  transform hover:-translate-x-0 hover:scale-105;
 }
 
 .fb_btn {
