update sign-up page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
           <div class="mt-7"><i class="fas fa-lock"></i>
             <%= f.input :password, autocomplete: "new-password", input_html:{ class:"sign_form", placeholder: "密碼" } %>
             <% if @minimum_password_length %>
-            <em>(密碼需 6 位字以上)</em>
+            <em>(密碼需 6 位數以上)</em>
             <% end %><br />
           </div>
 
