edit Sign-In page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
               <%= f.input :password_confirmation, autocomplete: "new-password", input_html:{ class:"sign_form", placeholder: "確認密碼" } %>
             </div>
             <div class="mt-7">
-              <%= f.button :submit, "註冊", class: "bg-red-500" %>
+              <%= f.button :submit, "註冊" %>
             </div>
             <div class="flex mt-7 items-center text-center">
               <hr class="border-gray-300 border-1 w-full rounded-md">
@@ -38,8 +38,7 @@
               </button>
             </div>
             <div class="mt-7">
-              <div class="flex justify-center items-center">
-                <p class="text-blue-500 pr-1 duration-500 hover:text-blue-400">使用條款</p>
+              <div class="">
                 <p class="pl-1">© 2021 SoundBar, Inc.</p>
               </div>
             </div>
