add sign-in button at sign-up page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -37,6 +37,9 @@
                 <a rel="nofollow" data-method="post" href="/users/auth/google_oauth2"> Google</a>
               </button>
             </div>
+            <div class="m-7">
+              <%= f.button :submit, "回到登入畫面" %>
+            </div>
             <div class="mt-7">
               <div class="">
                 <p class="pl-1">© 2021 SoundBar, Inc.</p>
