--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -37,8 +37,8 @@
                 <a rel="nofollow" data-method="post" href="/users/auth/google_oauth2"> Google</a>
               </button>
             </div>
-            <div class="m-7">
-              <%= f.button :submit, "回到登入畫面" %>
+            <div class="m-7 text-blue-500 duration-400 hover:text-blue-400">
+              <%= link_to "回到登入頁面", "/#" %>
             </div>
             <div class="mt-7">
               <div class="">
