update link of back-to-sign-in button

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -38,7 +38,7 @@
               </button>
             </div>
             <div class="m-7 text-blue-500 duration-400 hover:text-blue-400">
-              <%= link_to "回到登入頁面", "/#" %>
+              <%= link_to "回到登入頁面", "/users/sign_in" %>
             </div>
             <div class="mt-7">
               <div class="">
