update button's css

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
               <%= f.input :password_confirmation, autocomplete: "new-password", input_html:{ class:"sign_form", placeholder: "確認密碼" } %>
             </div>
             <div class="mt-7">
-              <%= f.button :submit, "註冊" %>
+              <%= f.button :submit, "註冊", class: "btn-primary" %>
             </div>
             <div class="flex mt-7 items-center text-center">
               <hr class="border-gray-300 border-1 w-full rounded-md">
