--- a/app/javascript/styles/button.scss
+++ b/app/javascript/styles/button.scss
@@ -1,9 +1,9 @@
 .btn {
-  @apply rounded-lg font-medium px-4 py-2 bg-blue-500 w-full text-white shadow-xl hover:shadow-inner focus:outline-none transition duration-500 ease-in-out transform hover:-translate-x-0 hover:scale-105;
+  @apply rounded-lg font-medium px-4 py-2 w-full shadow-xl hover:shadow-inner focus:outline-none transition duration-500 ease-in-out transform hover:-translate-x-0 hover:scale-105;
 }
 
 .btn-primary {
-  @apply bg-blue-500 hover:bg-blue-700;
+  @apply bg-blue-500 text-white;
 }
 
 .button-link {
