--- a/app/views/podcasts/_sidebar.html.erb
+++ b/app/views/podcasts/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <div class="h-full bg-gray-200">
-  <%= link_to image_tag("new_logo_black", size: "280x280"), "/#" %>
+  <%= link_to image_tag("new_logo_black", size: "280x280"), podcasts_path %>
   <div class="flex justify-center">
     <div class="w-24 h-24 pt-3"><%= image_tag(@podcast.cover.url) if @podcast.cover? %></div>
   </div>
@@ -7,7 +7,7 @@
     <li class="sidebar_list">
       <a href="">
         <span class="p-1"><i class="fas fa-tachometer-alt"></i></span>
-        <span>數據總覽</span>
+        <%= link_to "數據總覽", dashboard_podcast_path(@podcast.random_url) %>
       </a>
     </li>
     <li class="sidebar_list">
